--- a/pages/aprender/lenguajes.mdx
+++ b/pages/aprender/lenguajes.mdx
@@ -2,7 +2,7 @@
 
 ## ¿Qué lenguajes se usan hoy?
 
-El índice TIOBE es un indicador de la popularidad de los lenguajes de programación usados actualmente. Es un buen indicador para saber si un lenguaje tiene mercado en la industria. Este índice puede ser consultado [cliqueando acá](https://www.tiobe.com/tiobe-index/). Al día de hoy (7/6/2023), los lenguajes que encabezan la lista son:
+El índice TIOBE es un indicador de la popularidad de los lenguajes usados actualmente. Es un buen indicador para saber si un lenguaje tiene mercado en la industria. Este índice puede ser consultado [cliqueando acá](https://www.tiobe.com/tiobe-index/). Al día de hoy (7/6/2023), los lenguajes que encabezan la lista son:
 
 1. **Python**
 2. **C**
