Uso de Headers para los contenidos para generar los indices

--- a/pages/aprender/recursos.mdx
+++ b/pages/aprender/recursos.mdx
@@ -1,18 +1,6 @@
-import React from 'react';
-export const BackgroundHeader = ({children}) => (
-  <h2 style={{ backgroundColor: '#1d1e20', color: 'white', padding: '3px', paddingLeft:'1rem',borderRadius: '5px', textAlign: 'left'}}>
-    {children}
-  </h2>
-);
-export const BackgroundHeaderBlue = ({children}) => (
-  <h2 style={{ backgroundColor: '#0079d3', color: 'white', padding: '3px', paddingLeft:'1rem',borderRadius: '5px', textAlign: 'left'}}>
-    {children}
-  </h2>
-);
-
 # Recursos
 
-<BackgroundHeader>Linux</BackgroundHeader>
+## Linux
 
 |   | Nombre | Tipo |
 | :--- | :---- | :----: |
@@ -25,9 +13,8 @@ export const BackgroundHeaderBlue = ({children}) => (
 | 7 | [**Scripting en Bash**](https://atareao.es/tutorial/scripts-en-bash/) | Curso / Tutorial |
 | 8 | [**OVERTHEWIRE - BANDIT**] [**Juego para aprender y practicar comandos Linux**](https://overthewire.org/wargames/bandit/)| JUEGO |
 
----
+## GIT
 
-<BackgroundHeaderBlue>GIT</BackgroundHeaderBlue>
 |   | Nombre | Tipo |
 | :--- | :---- | :----: |
 | 1 | [**Introducción a GIT**](https://www.adslzone.net/reportajes/software/mejores-distros-linux/#421460-que-es-una-distro-linux) | MANUAL |
