--- a/pages/aprender/carreras.mdx
+++ b/pages/aprender/carreras.mdx
@@ -1,39 +1,43 @@
 # Carreras
 
-## Licenciaturas e Ingenierias
+## Universidad de Buenos Aires
 
-* Lic. Ciencias de la Computacion, UBA
-    * [Plan de estudio](https://computacion.dc.uba.ar/plan-de-estudios-2023/)
----
-* Lic. Ciencias de Datos, UNSAM:
-    * [Plan de estudio](https://lcd.exactas.uba.ar/materias/)
----
-* Lic. Ciencias de Datos, UBA:
-    * [Plan de estudio](https://www.unsam.edu.ar/escuelas/ciencia/661/ciencia/ciencia-de-datos)
----
-* Lic. Informatica, UNLP:
-    * [Plan de estudio](https://unlp.edu.ar/carreras_de_grado/licenciatura-en-informatica-8102)
----
-* Lic. Ciencias de la Computacion, UNC:
-    * [Plan de estudio](https://www.famaf.unc.edu.ar/academica/grado/licenciatura-en-ciencias-de-la-computaci%C3%B3n/)
----
-* Lic. Ciencias de Datos, UNSAM :
-    * [Plan de estudio](https://www.unsam.edu.ar/escuelas/ciencia/661/ciencia/ciencia-de-datos#tabs-11)
----
-* Lic. Ciencias de Datos, UBA:
-    * [Plan de estudio](https://lcd.exactas.uba.ar/materias/)
----
-* Ing. Sistemas, UTN:
-    * [Plan de estudio](https://www.frba.utn.edu.ar/sistemas/plan-de-estudios/)
----
-* Ing. Informatica, UBA
-    * [Plan de estudio](https://cms.fi.uba.ar/uploads/Actualizacion_de_plan_de_estudios_de_Ingenieria_Informatica_2021_f5e1d5e575.pdf)
----
-* Ing. Informatica, ITBA
-    * [Plan de estudio](https://www.itba.edu.ar/grado/ingenieria-informatica/)
----
-* Ing, Computacion, UNLP
-    * [Plan de estudio](https://unlp.edu.ar/carreras_de_grado/ingenieria-en-computacion-8100)
----
-* Ing, Computacion, UNC
-    * [Plan de estudio](https://fcefyn.unc.edu.ar/facultad/secretarias/academica/escuelas/ingenieria-computacion/ingenieria-en-computacion/)
+### Lic. Ciencias de la Computacion
+- [Plan de estudio](https://computacion.dc.uba.ar/plan-de-estudios-2023/)
+
+### Lic. Ciencias de Datos
+- [Plan de estudio](https://lcd.exactas.uba.ar/materias/)
+
+### Ing. Informatica
+- [Plan de estudio](https://cms.fi.uba.ar/uploads/Actualizacion_de_plan_de_estudios_de_Ingenieria_Informatica_2021_f5e1d5e575.pdf)
+
+## Universidad Nacional de San Martín
+
+### Lic. Ciencias de Datos
+- [Plan de estudio](https://www.unsam.edu.ar/escuelas/ciencia/661/ciencia/ciencia-de-datos#tabs-11)
+
+## Universidad Nacional de La Plata
+
+### Lic. Informatica
+- [Plan de estudio](https://unlp.edu.ar/carreras_de_grado/licenciatura-en-informatica-8102)
+
+### Ing, Computacion
+- [Plan de estudio](https://unlp.edu.ar/carreras_de_grado/ingenieria-en-computacion-8100)
+
+## Universidad Nacional de Córdoba
+
+### Lic. Ciencias de la Computacion
+- [Plan de estudio](https://www.famaf.unc.edu.ar/academica/grado/licenciatura-en-ciencias-de-la-computaci%C3%B3n/)
+
+### Ing, Computacion
+- [Plan de estudio](https://fcefyn.unc.edu.ar/facultad/secretarias/academica/escuelas/ingenieria-computacion/ingenieria-en-computacion/)
+
+## Universidad Tecnologica Nacional
+
+### Ing. Sistemas
+- [Plan de estudio](https://www.frba.utn.edu.ar/sistemas/plan-de-estudios/)
+
+## Instituto Tecnológico de Buenos Aires
+
+### Ing. Informatica
+- [Plan de estudio](https://www.itba.edu.ar/grado/ingenieria-informatica/) 
