Correccion de formato

--- a/pages/aprender/bootcamps.mdx
+++ b/pages/aprender/bootcamps.mdx
@@ -38,7 +38,9 @@ Empresa que provee bootcamps de Ciencia de Datos y Desarrollo Full Stack, tanto 
 
 Empresa que provee bootcamps de DevOps Engineer, Full Stack Engineer, Java Developer y Game Developer. El bootcamp se abona antes de comenzar el mismo.
 
-3. [**Plataforma 5**](https://www.plataforma5.la/): [Opinión](https://www.reddit.com/r/devsarg/comments/121wctf/comment/jdoxxwi/?utm_source=reddit&utm_medium=web2x&context=3)
+3. [**Plataforma 5**](https://www.plataforma5.la/) 
+
+[Opinión](https://www.reddit.com/r/devsarg/comments/121wctf/comment/jdoxxwi/?utm_source=reddit&utm_medium=web2x&context=3)
 
 Empresa que provee bootcamps de Salesforce y Full Stack Javascript Developer. El curso introductorio para el bootcamp posee dos modalidades: "ATR" y "Con profesor". Ambas cuestan $4.860 y $3.990 (Junio 2023) respectivamente. La página no muestra información adicional sobre los costos del bootcamp en sí, solamente del curso introductorio.
 
