--- a/pages/aprender/bootcamps.mdx
+++ b/pages/aprender/bootcamps.mdx
@@ -4,7 +4,7 @@
 
 En el contexto del aprendizaje de programación, un bootcamp es un programa de aprendizaje intensivo (alta carga horaria en un espacio reducido de tiempo). La duración de un bootcamp suele variar entre 3 y 6 meses por lo general. El objetivo de un bootcamp es formar en el menor tiempo posible a un conjunto de programadores en un set de tecnologías específicas, de ahí que surjan bootcamps con diferentes denominaciones de acuerdo a los contenidos a verse en el mismo (Bootcamp Java, Bootcamp Full Stack Engineer, Bootcamp Data Science, Bootcamp Unreal, etcétera).
 
-Algunas empresas organizan bootcamps para entrenar a trainees, de los cuales posteriormente seleccionarán varios (de acuerdo al desempeño mostrado) para que se integren de forma permanente a la empresa. Lo usual es que uno se inscriba a un bootcamp de una ed-tech por iniciativa propia, con el objetivo de formarse de forma más profunda en un stack tecnológico.
+Algunas empresas organizan bootcamps para entrenar a trainees, de los cuales posteriormente seleccionarán varios (de acuerdo al desempeño mostrado) para que se integren de forma permanente a la empresa. Lo usual es que uno se inscriba a un bootcamp de una ed-tech por iniciativa propia, con el objetivo de formarse de manera más profunda en un stack tecnológico.
 
 ## Financiamiento de los bootcamps
 
@@ -26,29 +26,35 @@ En términos generales, la diferencia entre un bootcamp gratuito y un pago es qu
 
 Es usual que surjan muchas dudas e inquietudes a la hora de elegir un bootcamp. A continuación podrás ver una lista de publicaciones de DevsArg en la que algunos miembros del subreddit comparten sus experiencias en diferentes bootcamps de Argentina:
 
-1. [**SoyHenry**](https://www.soyhenry.com/): 
-
-[Opinión 1](https://www.reddit.com/r/devsarg/comments/13e97mm/como_me_com%C3%AD_el_chasco_con_soyhenry/) | [Opinión 2](https://www.reddit.com/r/devsarg/comments/uy06qk/bootcamp_soy_henry/) | [Thread 3](https://www.reddit.com/r/devsarg/comments/yo654o/comment/ivfjt59/?utm_source=reddit&utm_medium=web2x&context=3)
+### 1. [SoyHenry](https://www.soyhenry.com/): 
 
 Empresa que provee bootcamps de Ciencia de Datos y Desarrollo Full Stack, tanto en modalidad full time como part time. Se ingresa mediante una evaluación técnica. El bootcamp se abona mediante un acuerdo de ingresos compartidos, según el cual empezás a pagar luego de conseguir un trabajo a través del cual tus ingresos brutos sean superiores a 500 USD (cotización oficial), descontándote un 15% del salario hasta abonar el costo total del bootcamp (4.000 USD).
 
-2. [**EducaciónIT**](https://www.educacionit.com/) 
+[Opinión 1](https://www.reddit.com/r/devsarg/comments/13e97mm/como_me_com%C3%AD_el_chasco_con_soyhenry/) | [Opinión 2](https://www.reddit.com/r/devsarg/comments/uy06qk/bootcamp_soy_henry/) | [Opinión 3](https://www.reddit.com/r/devsarg/comments/yo654o/comment/ivfjt59/?utm_source=reddit&utm_medium=web2x&context=3)
 
-[Opinión 1](https://www.reddit.com/r/devsarg/comments/ykfywg/educacion_it_bootcamp_devops_engineer/) | [Opinión 2](https://www.reddit.com/r/devsarg/comments/13uk5a8/devops_cursobootcamp/)
+### 2. [EducaciónIT](https://www.educacionit.com/) 
 
 Empresa que provee bootcamps de DevOps Engineer, Full Stack Engineer, Java Developer y Game Developer. El bootcamp se abona antes de comenzar el mismo.
 
-3. [**Plataforma 5**](https://www.plataforma5.la/) 
+[Opinión 1](https://www.reddit.com/r/devsarg/comments/ykfywg/educacion_it_bootcamp_devops_engineer/) | [Opinión 2](https://www.reddit.com/r/devsarg/comments/13uk5a8/devops_cursobootcamp/)
 
-[Opinión](https://www.reddit.com/r/devsarg/comments/121wctf/comment/jdoxxwi/?utm_source=reddit&utm_medium=web2x&context=3)
+### 3. [Plataforma 5](https://www.plataforma5.la/) 
 
 Empresa que provee bootcamps de Salesforce y Full Stack Javascript Developer. El curso introductorio para el bootcamp posee dos modalidades: "ATR" y "Con profesor". Ambas cuestan $4.860 y $3.990 (Junio 2023) respectivamente. La página no muestra información adicional sobre los costos del bootcamp en sí, solamente del curso introductorio.
 
-4. [**Programa IT Academy**](https://www.mercadolibre.com.ar/itacademy) (también conocido como "Bootcamp MeLi")
+[Opinión](https://www.reddit.com/r/devsarg/comments/121wctf/comment/jdoxxwi/?utm_source=reddit&utm_medium=web2x&context=3)
+
+### 4. [Programa IT Academy](https://www.mercadolibre.com.ar/itacademy) (también conocido como "Bootcamp MeLi")
 
 Programa de formación intensiva creado por Mercado Libre. Como requisitos se pide tener formación en carreras de Sistemas. Posee programas de formación en desarrollo frontend, backend y machine learning. No tenemos reviews de la comunidad con respecto a este bootcamp. Ver [este thread](https://www.reddit.com/r/devsarg/comments/tnv07t/personas_que_hallan_entrado_al_bootcamp_de/) donde se discute en detalle sobre el proceso de selección de los ingresantes.
 
-5. [**Otros bootcamps...**](https://www.reddit.com/r/devsarg/comments/10mcfma/referencias_besysoft_capgemini_neoris_ayigroup/)
+### 5. [Bootcamp Accenture](https://www.accenture.com/ar-es/careers/local/accenture-bootcamps-de-accenture)
+
+Bootcamp de la empresa multinacional Accenture, dedicada a brindar soluciones tecnológicas a organizaciones. Los bootcamps son totalmente gratuitos y online. Según indica la página, más del 90% de los alumnos del bootcamp son incorporados luego como empleados de Accenture. Lamentablemente la página oficial no indica qué tecnologías concretas son estudiadas en el bootcamp.
+
+[Opinión](https://www.reddit.com/r/devsarg/comments/10eo1ri/opiniones_del_bootcamp_accenture/)
+
+### 6. [Otros bootcamps...](https://www.reddit.com/r/devsarg/comments/10mcfma/referencias_besysoft_capgemini_neoris_ayigroup/)
 
 
 ## ¿Debería inscribirme a un bootcamp pago?
