--- a/pages/aprender/cursos.mdx
+++ b/pages/aprender/cursos.mdx
@@ -9,3 +9,4 @@
 - [The Odin Project - FullStack JavaScript](https://www.theodinproject.com/paths/full-stack-javascript)
 - [FreeCodeCamp - Diseño Web Adaptativo](https://www.freecodecamp.org/espanol/learn/2022/responsive-web-design/)
 - [FreeCodeCamp - Algoritmos de JavaScript y Estructuras de Datos](https://www.freecodecamp.org/espanol/learn/javascript-algorithms-and-data-structures/)
+- [Aprende JavaScript - Curso para aprender paso a paso JavaScript desde cero](https://www.aprendejavascript.dev/)
