Agregar RedMonk (Resolved #11)

--- a/pages/aprender/lenguajes.mdx
+++ b/pages/aprender/lenguajes.mdx
@@ -2,18 +2,47 @@
 
 ## ¿Qué lenguajes se usan hoy?
 
-El índice TIOBE es un indicador de la popularidad de los lenguajes usados actualmente. Es un buen indicador para saber si un lenguaje tiene mercado en la industria. Este índice puede ser consultado [cliqueando acá](https://www.tiobe.com/tiobe-index/). Al día de hoy (7/6/2023), los lenguajes que encabezan la lista son:
+### RedMonk
+
+Los Ránkings de Lenguajes de Programación de RedMonk son una serie de listas que clasifican los lenguajes de programación según su popularidad y adopción en la comunidad de desarrollo de software. Estos ránkings son publicados periódicamente por RedMonk, una firma de análisis de tecnología de la información y consultoría. Los rankings se basan en datos recopilados de una variedad de fuentes, como repositorios de código abierto, preguntas en sitios de preguntas y respuestas como Stack Overflow, y discusiones en redes sociales y foros de desarrollo.
+
+1. **JavaScript**
+2. **Python**
+3. **Java**
+4. **PHP**
+5. **C#**
+6. **CSS**
+7. **TypeScript**
+8. **C++**
+9. **Ruby**
+10. **C**
+11. **Swift**
+12. **Shell**
+13. **R**
+14. **Go**
+15. **Scala**
+16. **Objective-C**
+17. **Kotlin**
+18. **PowerShell**
+19. **Rust**
+20. **Dart**
+
+Es importante destacar que los RedMonk Programming Language Rankings no se centran exclusivamente en la popularidad, sino que también tienen en cuenta la adopción y la relevancia en la industria. Esto significa que un lenguaje de programación puede ser considerado relevante incluso si no es el más popular en términos de uso activo.
+
+### TIOBE
+
+El índice TIOBE es un indicador de la popularidad de los lenguajes usados actualmente. Es un buen indicador para saber si un lenguaje tiene mercado en la industria. Este índice puede ser consultado [cliqueando acá](https://www.tiobe.com/tiobe-index/). Al día de hoy (1/10/2023), los lenguajes que encabezan la lista son:
 
 1. **Python**
 2. **C**
 3. **C++**
 4. **Java** 
 5. **C#** 
-6. **Visual Basic** 
-7. **JavaScript** 
+6. **JavaScript** 
+7. **Visual Basic** 
 8. **PHP**
-9. **SQL**
-10. **Assembly**
+9. **Assembly**
+10. **SQL**
 
 ## ¿Qué lenguajes debo aprender?
 
